--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,77 +7,69 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="50dp">
+        android:layout_marginTop="50dp"
+        android:gravity="center">
+
         <androidx.cardview.widget.CardView
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
             android:layout_gravity="center"
-            app:cardCornerRadius="50dp">
+            app:cardCornerRadius="70dp">
+
             <ImageView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:src="@color/black"/>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_marginTop="10dp"
         android:padding="24dp">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp">
-            <Button
-                android:id="@+id/eduMenu_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="교육공간"
-                android:background="@drawable/solid"
-                android:textColor="@color/black"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp">
-            <Button
-                android:id="@+id/practiceMenu_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="실습공간"
-                android:background="@drawable/solid"
-                android:textColor="@color/black"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp">
-            <Button
-                android:id="@+id/myspaceMenu_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="내 공간"
-                android:background="@drawable/solid"
-                android:textColor="@color/black"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp">
-            <Button
-                android:id="@+id/settingMenu_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="환경설정"
-                android:background="@drawable/solid"
-                android:textColor="@color/black"/>
-        </LinearLayout>
 
+        <Button
+            android:id="@+id/eduMenu_btn"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:text="교육공간"
+            android:background="@drawable/solid"
+            android:textColor="@color/black"
+            android:layout_marginBottom="16dp"/>
+
+        <Button
+            android:id="@+id/practiceMenu_btn"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:text="실습공간"
+            android:background="@drawable/solid"
+            android:textColor="@color/black"
+            android:layout_marginBottom="16dp"/>
+
+        <Button
+            android:id="@+id/myspaceMenu_btn"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:text="내 공간"
+            android:background="@drawable/solid"
+            android:textColor="@color/black"
+            android:layout_marginBottom="16dp"/>
+
+        <Button
+            android:id="@+id/settingMenu_btn"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:text="환경설정"
+            android:background="@drawable/solid"
+            android:textColor="@color/black"/>
     </LinearLayout>
 
 </LinearLayout>
