[add] 교육공간-화면구성 초기 기능 추가

--- a/app/src/main/res/layout/activity_edu_space.xml
+++ b/app/src/main/res/layout/activity_edu_space.xml
@@ -26,6 +26,7 @@
                 android:layout_marginRight="20dp"/>
 
             <Button
+                android:id="@+id/screenEdu_btn"
                 android:layout_width="0dp"
                 android:layout_height="150dp"
                 android:layout_weight="1"
