--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Synergy" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:windowActionBarOverlay">true</item> <!-- 여기서 상단바를 오버레이로 설정 -->
+
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
