--- a/app/src/main/res/layout/activity_kakao_main.xml
+++ b/app/src/main/res/layout/activity_kakao_main.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -5,15 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".kakaotalk.KakaoMainActivity">
-
-    <FrameLayout
-        android:id="@+id/kakaoMainFrameLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/kakaoNavigationView" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/kakaoNavigationView"
@@ -25,5 +17,14 @@
         app:menu="@menu/kakao_navi_menu"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:ignore="MissingConstraints" />
+
+    <FrameLayout
+        android:id="@+id/kakaoMainFrameLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/kakaoNavigationView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
