--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#FFFFFF</color>
+
+    <color name="learnChatColor">#FF5106</color>
+    <color name="chatColor">#95F4F3FD</color>
+    <color name="iconLearning">#FFE7EE</color>
+    <color name="messageLearning">#BAD6FF</color>
+    <color name="callLearning">#BAE0DB</color>
+    <color name="screenLearning">#C4BAE0</color>
+    <color name="naverLearning">#DFE0BA</color>
+    <color name="kakaotalkLearning">#E0BAC8</color>
+
+
 </resources>
