--- a/app/src/main/res/layout/activity_setting_detail.xml
+++ b/app/src/main/res/layout/activity_setting_detail.xml
@@ -31,6 +31,7 @@
         android:id="@+id/btn_setting_display"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#7A7878"
         android:text="디스플레이 설정 보기"
         app:layout_constraintTop_toBottomOf="@id/tv_name"
         app:layout_constraintStart_toStartOf="parent"
