--- a/app/src/main/res/layout/activity_setting_display.xml
+++ b/app/src/main/res/layout/activity_setting_display.xml
@@ -1,11 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!-- 이미지와 라디오 버튼 -->
+    <LinearLayout
+        android:id="@+id/layoutImagesAndRadio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="5dp"
+        android:layout_marginHorizontal="4dp"
+        android:background="#7A7878"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <!-- 이미지 레이아웃 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <!-- 라이트 이미지 -->
+            <ImageView
+                android:id="@+id/iv_light"
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                android:layout_weight="1"
+                android:src="@drawable/light"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="8dp"/>
+
+            <!-- 다크 이미지 -->
+            <ImageView
+                android:id="@+id/iv_dark"
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                android:layout_weight="1"
+                android:src="@drawable/dark"
+                android:layout_gravity="center_vertical"/>
+        </LinearLayout>
+
+        <!-- 텍스트와 라디오 버튼을 수평으로 나란히 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <RadioGroup
+                android:id="@+id/radioGroupLightDark"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <!-- 라이트 텍스트와 라디오 버튼 -->
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/tv_light"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="라이트"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        android:layout_marginTop="8dp"/>
+
+                    <!-- 라이트 라디오 버튼 -->
+                    <RadioButton
+                        android:id="@+id/rb_light"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                       />
+                </LinearLayout>
+
+                <!-- 다크 텍스트와 라디오 버튼 -->
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/tv_dark"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="다크"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        android:layout_marginTop="8dp"/>
+
+                    <!-- 다크 라디오 버튼 -->
+                    <RadioButton
+                        android:id="@+id/rb_dark"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:checked="true"/>
+                </LinearLayout>
+            </RadioGroup>
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+    <!-- 리니어 레이아웃과 시크바 -->
+    <LinearLayout
+        android:id="@+id/layoutBrightness"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_marginHorizontal="4dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="0dp"
+        android:background="#7A7878"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/layoutImagesAndRadio"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- 밝기 텍스트뷰 추가 -->
+        <TextView
+            android:id="@+id/tv_Brightness"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="밝기"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <!-- 시크바와 이미지를 감싸는 레이아웃 -->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="7dp">
+
+            <!-- 이미지뷰 추가 -->
+            <ImageView
+                android:id="@+id/iv_leftImage"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginStart="12dp"
+                android:src="@drawable/brightness"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true"/>
+
+            <!-- 시크바 추가 -->
+            <SeekBar
+                android:id="@+id/sb_Brightness"
+                android:layout_width="500dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:layout_toEndOf="@+id/iv_leftImage"
+                android:background="#7A7878"
+                android:max="100"
+                android:progress="50"
+                android:theme="@style/Widget.AppCompat.SeekBar.Discrete" />
+        </RelativeLayout>
+    </LinearLayout>
+
+    <!-- 리사이클러뷰 추가 -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_display"
         android:layout_width="match_parent"
@@ -13,8 +182,11 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:orientation="vertical"
         tools:listitem="@layout/display_setting_recycler"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+
+        app:layout_constraintTop_toBottomOf="@id/layoutBrightness"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="338dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
