--- a/app/src/main/res/layout/activity_screen_edu_main.xml
+++ b/app/src/main/res/layout/activity_screen_edu_main.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,11 +8,9 @@
     android:orientation="vertical"
     tools:context=".screenEdu.ScreenEduActivity" >
 
-    <!--상단바-->
     <include layout="@layout/toolbar"
         android:background="@drawable/transparent_black_box"/>
 
-    <!--손-->
     <ImageView
         android:id="@+id/hand_iv"
         android:layout_width="50dp"
@@ -21,36 +18,32 @@
         android:src="@drawable/hand"
         android:visibility="gone" />
 
-    <!--초록색 선-->
-
     <LinearLayout
         android:layout_width="366dp"
         android:layout_height="644dp"
         android:layout_weight="1"
-
+        android:background="@drawable/green_border"
         android:gravity="center"
         android:orientation="vertical">
 
 
-    <!--텍스트부분-->
         <TextView
             android:id="@+id/change_tv"
-            android:layout_width="199dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="홈 화면 설명을 시작하겠습니다"
+            android:text="이 부분은 메뉴 화면 입니다"
             android:textSize="30dp" />
 
 
     </LinearLayout>
 
-    <!-- 다음 버튼-->
     <Button
         android:id="@+id/next_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="다음" />
 
-    <!-- Bottom Bar -->
+    <!-- Bottom Bar Layout 추가 -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
