--- a/app/src/main/res/layout/activity_kakao_main.xml
+++ b/app/src/main/res/layout/activity_kakao_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".kakaotalk.KakaoMainActivity">
+    tools:context=".edu_space.kakaotalk.activity.KakaoMainActivity">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/kakaoNavigationView"
