--- a/app/src/main/res/layout/activity_profile_detail.xml
+++ b/app/src/main/res/layout/activity_profile_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#809BB5"
     android:orientation="vertical"
-    tools:context=".kakaotalk.ProfileDetailActivity">
+    tools:context=".edu_space.kakaotalk.activity.ProfileDetailActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
