--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".defaultApp.ContactFragment">
+    tools:context=".edu_space.default_app.ContactFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
