--- a/app/src/main/res/layout/fragment_keypad.xml
+++ b/app/src/main/res/layout/fragment_keypad.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".defaultApp.KeypadFragment">
+    tools:context=".edu_space.default_app.KeypadFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -38,7 +38,7 @@
             android:layout_above="@id/key_layout1"
             android:gravity="center|bottom"
             android:inputType="phone"
-            android:textSize="32sp"/>
+            android:textSize="24sp"/>
 
         <!-- 1, 2, 3 -->
         <LinearLayout
@@ -256,7 +256,7 @@
                 android:contentDescription="@string/call"/>
 
             <ImageButton
-                android:id="@+id/back"
+                android:id="@+id/delete"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginStart="32dp"
@@ -264,7 +264,7 @@
                 android:scaleType="centerInside"
                 android:padding="20dp"
                 android:background="@drawable/touch_circle"
-                android:contentDescription="@string/back"/>
+                android:contentDescription="@string/delete"/>
 
         </LinearLayout>
 
