--- a/app/src/main/res/layout/activity_phone.xml
+++ b/app/src/main/res/layout/activity_phone.xml
@@ -3,10 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/phoneBgColor"
     tools:context=".edu_space.default_app.PhoneActivity">
+
+    <FrameLayout
+        android:id="@+id/edu_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <!-- 상단 바 -->
     <LinearLayout
@@ -35,7 +41,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:src="@drawable/phone_magnifying_glass"
-                android:background="@drawable/touch_circle"
+                android:background="@drawable/black_circle"
                 android:padding="12dp"
                 android:scaleType="centerInside"/>
 
@@ -44,7 +50,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:src="@drawable/phone_more"
-                android:background="@drawable/touch_circle"
+                android:background="@drawable/black_circle"
                 android:padding="12dp"
                 android:scaleType="centerInside"/>
 
