--- a/app/src/main/res/layout/fragment_keypad.xml
+++ b/app/src/main/res/layout/fragment_keypad.xml
@@ -25,7 +25,7 @@
                 android:text="@string/add_to_contacts"
                 android:textSize="20sp"
                 android:textColor="@color/phoneGreen"
-                android:background="@drawable/touch_rounded_rect"
+                android:background="@drawable/black_rounded_rect"
                 android:paddingVertical="0dp"
                 android:paddingHorizontal="20dp"/>
         </LinearLayout>
@@ -57,7 +57,7 @@
                 android:text="@string/one"
                 android:textSize="24sp"
                 android:textColor="@color/black"
-                android:background="@drawable/touch_circle"
+                android:background="@drawable/black_circle"
                 style="?android:attr/buttonBarButtonStyle">
             </Button>
 
@@ -69,7 +69,7 @@
                 android:text="@string/two"
                 android:textSize="24sp"
                 android:textColor="@color/black"
-                android:background="@drawable/touch_circle"
+                android:background="@drawable/black_circle"
                 style="?android:attr/buttonBarButtonStyle">
             </Button>
 
@@ -81,7 +81,7 @@
                 android:text="@string/three"
                 android:textSize="24sp"
                 android:textColor="@color/black"
-                android:background="@drawable/touch_circle"
+                android:background="@drawable/black_circle"
                 style="?android:attr/buttonBarButtonStyle">
             </Button>
 
@@ -103,7 +103,7 @@
                 android:text="@string/four"
                 android:textSize="24sp"
                 android:textColor="@color/black"
-                android:background="@drawable/touch_circle"
+                android:background="@drawable/black_circle"
                 style="?android:attr/buttonBarButtonStyle">
             </Button>
 
@@ -115,7 +115,7 @@
                 android:text="@string/five"
                 android:textSize="24sp"
                 android:textColor="@color/black"
-                android:background="@drawable/touch_circle"
+                android:background="@drawable/black_circle"
                 style="?android:attr/buttonBarButtonStyle">
             </Button>
 
@@ -127,7 +127,7 @@
                 android:text="@string/six"
                 android:textSize="24sp"
                 android:textColor="@color/black"
-                android:background="@drawable/touch_circle"
+                android:background="@drawable/black_circle"
                 style="?android:attr/buttonBarButtonStyle">
             </Button>
 
@@ -149,7 +149,7 @@
                 android:text="@string/seven"
                 android:textSize="24sp"
                 android:textColor="@color/black"
-                android:background="@drawable/touch_circle"
+                android:background="@drawable/black_circle"
                 style="?android:attr/buttonBarButtonStyle">
             </Button>
 
@@ -161,7 +161,7 @@
                 android:text="@string/eight"
                 android:textSize="24sp"
                 android:textColor="@color/black"
-                android:background="@drawable/touch_circle"
+                android:background="@drawable/black_circle"
                 style="?android:attr/buttonBarButtonStyle">
             </Button>
 
@@ -173,7 +173,7 @@
                 android:text="@string/nine"
                 android:textSize="24sp"
                 android:textColor="@color/black"
-                android:background="@drawable/touch_circle"
+                android:background="@drawable/black_circle"
                 style="?android:attr/buttonBarButtonStyle">
             </Button>
 
@@ -195,7 +195,7 @@
                 android:text="@string/star"
                 android:textSize="24sp"
                 android:textColor="@color/black"
-                android:background="@drawable/touch_circle"
+                android:background="@drawable/black_circle"
                 style="?android:attr/buttonBarButtonStyle">
             </Button>
 
@@ -207,7 +207,7 @@
                 android:text="@string/zero"
                 android:textSize="24sp"
                 android:textColor="@color/black"
-                android:background="@drawable/touch_circle"
+                android:background="@drawable/black_circle"
                 style="?android:attr/buttonBarButtonStyle">
             </Button>
 
@@ -219,7 +219,7 @@
                 android:text="@string/sharp"
                 android:textSize="24sp"
                 android:textColor="@color/black"
-                android:background="@drawable/touch_circle"
+                android:background="@drawable/black_circle"
                 style="?android:attr/buttonBarButtonStyle">
             </Button>
 
@@ -242,7 +242,7 @@
                 android:src="@drawable/phone_video_call"
                 android:scaleType="centerInside"
                 android:padding="20dp"
-                android:background="@drawable/touch_circle"
+                android:background="@drawable/black_circle"
                 android:contentDescription="@string/video_call"/>
 
             <ImageButton
@@ -252,7 +252,7 @@
                 android:layout_marginStart="32dp"
                 android:src="@drawable/phone_call"
                 android:scaleType="centerInside"
-                android:background="@drawable/touch_circle"
+                android:background="@drawable/black_circle"
                 android:contentDescription="@string/call"/>
 
             <ImageButton
@@ -263,7 +263,7 @@
                 android:src="@drawable/phone_back"
                 android:scaleType="centerInside"
                 android:padding="20dp"
-                android:background="@drawable/touch_circle"
+                android:background="@drawable/black_circle"
                 android:contentDescription="@string/delete"/>
 
         </LinearLayout>
