--- a/app/src/main/res/layout/display_setting_recycler.xml
+++ b/app/src/main/res/layout/display_setting_recycler.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:paddingHorizontal="20dp"
     android:paddingVertical="10dp"
-    android:background="#7A7878"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
@@ -17,9 +17,10 @@
         android:textStyle="bold"
         android:layout_marginLeft="0dp"
         android:textSize="24sp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
 
     <TextView
         android:id="@+id/tv_rv_dexplain"
@@ -29,7 +30,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="0dp"
         android:textSize="18sp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_rv_dname"/>
 
