--- a/app/src/main/res/layout/setting_recycler.xml
+++ b/app/src/main/res/layout/setting_recycler.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:paddingHorizontal="20dp"
     android:paddingVertical="10dp"
-    android:background="#7A7878"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
@@ -26,7 +26,7 @@
         android:textStyle="bold"
         android:layout_marginLeft="20dp"
         android:textSize="24sp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         app:layout_constraintLeft_toRightOf="@id/img_rv_photo"
         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -38,7 +38,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:textSize="18sp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         app:layout_constraintLeft_toRightOf="@id/img_rv_photo"
         app:layout_constraintTop_toBottomOf="@id/tv_rv_name"/>
 
