계정생성 구글메인페이지 초기구현

--- a/app/src/main/res/layout/activity_setting_detail.xml
+++ b/app/src/main/res/layout/activity_setting_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sungkyul.synergy.settingedu.SettingDetailActivity">
+    tools:context="com.sungkyul.synergy.edu_space.settingedu.activity.SettingDetailActivity">
 
     <ImageView
         android:id="@+id/img_setting"
