--- a/app/src/main/res/layout/activity_setting_display.xml
+++ b/app/src/main/res/layout/activity_setting_display.xml
@@ -210,7 +210,7 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:orientation="vertical"
         tools:listitem="@layout/display_setting_recycler"
-
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintTop_toBottomOf="@id/layoutBrightness"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
