--- a/app/src/main/res/layout/activity_setting_fontsize.xml
+++ b/app/src/main/res/layout/activity_setting_fontsize.xml
@@ -52,7 +52,7 @@
             android:id="@+id/main_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="글자가 이 크기로 표시됩니다."
+            android:text="글자가 이 크기로 표시됩니다.&#10;1234567890!@#%*()_+-="
             android:textSize="?attr/mainTextSize"
             android:textColor="@color/black"
             android:layout_gravity="center"
