[feat] 전화 기능 추가

--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -20,7 +20,7 @@
             android:id="@+id/settings_button"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:src="@drawable/camera_grey_circle"
+            android:src="@drawable/todo_circle"
             android:background="@drawable/white_circle"
             android:padding="12dp"
             android:scaleType="centerInside"
@@ -31,7 +31,7 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_marginStart="8dp"
-            android:src="@drawable/camera_grey_circle"
+            android:src="@drawable/todo_circle"
             android:background="@drawable/white_circle"
             android:padding="12dp"
             android:scaleType="centerInside"
@@ -42,7 +42,7 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_marginStart="8dp"
-            android:src="@drawable/camera_grey_circle"
+            android:src="@drawable/todo_circle"
             android:background="@drawable/white_circle"
             android:padding="12dp"
             android:scaleType="centerInside"
@@ -53,7 +53,7 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_marginStart="8dp"
-            android:src="@drawable/camera_grey_circle"
+            android:src="@drawable/todo_circle"
             android:background="@drawable/white_circle"
             android:padding="12dp"
             android:scaleType="centerInside"
@@ -64,7 +64,7 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_marginStart="8dp"
-            android:src="@drawable/camera_grey_circle"
+            android:src="@drawable/todo_circle"
             android:background="@drawable/white_circle"
             android:padding="12dp"
             android:scaleType="centerInside"
@@ -75,7 +75,7 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_marginStart="8dp"
-            android:src="@drawable/camera_grey_circle"
+            android:src="@drawable/todo_circle"
             android:background="@drawable/white_circle"
             android:padding="12dp"
             android:scaleType="centerInside"
@@ -105,7 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/singletake"
-            android:textSize="16sp"
+            android:textSize="12sp"
             android:textColor="@color/white"
             style="?android:attr/buttonBarButtonStyle"/>
 
@@ -113,7 +113,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/photo"
-            android:textSize="16sp"
+            android:textSize="12sp"
             android:layout_marginStart="20dp"
             android:textColor="@color/white"
             style="?android:attr/buttonBarButtonStyle"/>
@@ -122,7 +122,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/video"
-            android:textSize="16sp"
+            android:textSize="12sp"
             android:layout_marginStart="20dp"
             android:textColor="@color/white"
             style="?android:attr/buttonBarButtonStyle"/>
@@ -131,7 +131,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/more"
-            android:textSize="16sp"
+            android:textSize="12sp"
             android:layout_marginStart="20dp"
             android:textColor="@color/white"
             style="?android:attr/buttonBarButtonStyle"/>
@@ -151,7 +151,7 @@
             android:id="@+id/gallery_button"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/camera_grey_circle"
+            android:src="@drawable/todo_circle"
             android:scaleType="centerInside"
             android:padding="8dp"
             android:background="@drawable/white_circle"
@@ -171,7 +171,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginStart="32dp"
-            android:src="@drawable/camera_grey_circle"
+            android:src="@drawable/todo_circle"
             android:scaleType="centerInside"
             android:padding="8dp"
             android:background="@drawable/white_circle"
