--- a/app/src/main/res/layout/activity_gallery_view.xml
+++ b/app/src/main/res/layout/activity_gallery_view.xml
@@ -21,7 +21,7 @@
             android:id="@+id/back_button"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:src="@drawable/camera_grey_circle"
+            android:src="@drawable/todo_circle"
             android:background="@drawable/white_circle"
             android:padding="12dp"
             android:scaleType="centerInside"
@@ -36,7 +36,7 @@
                 android:id="@+id/bixby_vision_button"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
-                android:src="@drawable/camera_grey_circle"
+                android:src="@drawable/todo_circle"
                 android:background="@drawable/white_circle"
                 android:padding="12dp"
                 android:scaleType="centerInside"
@@ -46,7 +46,7 @@
                 android:id="@+id/more_button"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
-                android:src="@drawable/camera_grey_circle"
+                android:src="@drawable/todo_circle"
                 android:background="@drawable/white_circle"
                 android:padding="12dp"
                 android:scaleType="centerInside"
@@ -79,7 +79,7 @@
             android:id="@+id/favorite_button"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:src="@drawable/camera_grey_circle"
+            android:src="@drawable/todo_circle"
             android:background="@drawable/white_circle"
             android:padding="12dp"
             android:scaleType="centerInside"
@@ -90,7 +90,7 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_marginStart="24dp"
-            android:src="@drawable/camera_grey_circle"
+            android:src="@drawable/todo_circle"
             android:background="@drawable/white_circle"
             android:padding="12dp"
             android:scaleType="centerInside"
@@ -101,7 +101,7 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_marginStart="24dp"
-            android:src="@drawable/camera_grey_circle"
+            android:src="@drawable/todo_circle"
             android:background="@drawable/white_circle"
             android:padding="12dp"
             android:scaleType="centerInside"
@@ -112,7 +112,7 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_marginStart="24dp"
-            android:src="@drawable/camera_grey_circle"
+            android:src="@drawable/todo_circle"
             android:background="@drawable/white_circle"
             android:padding="12dp"
             android:scaleType="centerInside"
