--- a/app/src/main/res/layout/activity_phone.xml
+++ b/app/src/main/res/layout/activity_phone.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/phoneBgColor"
+    android:background="@color/phoneDeepBgColor"
     tools:context=".edu_space.default_app.PhoneActivity">
 
     <FrameLayout
